src/test/ui/parser/issues/issue-67377-invalid-syntax-in-enum-discriminant.stderr
error: mismatched closing delimiter: `]`
  --> $DIR/issue-67377-invalid-syntax-in-enum-discriminant.rs:5:42
   |
LL |         V = [PhantomData; { [ () ].len() ].len() as isize,
   |                           -              ^ mismatched closing delimiter
   |                           |
   |                           unmatched opening delimiter begins here

error: mismatched closing delimiter: `]`
  --> $DIR/issue-67377-invalid-syntax-in-enum-discriminant.rs:12:36
   |
LL |         V = [Vec::new; { [].len()  ].len() as isize,
   |                        -           ^ mismatched closing delimiter
   |                        |
   |                        unmatched opening delimiter begins here

error: mismatched closing delimiter: `]`
  --> $DIR/issue-67377-invalid-syntax-in-enum-discriminant.rs:20:36
   |
LL |         V = [Vec::new; { [0].len() ].len() as isize,
   |                        -           ^ mismatched closing delimiter
   |                        |
   |                        unmatched opening delimiter begins here

error[E0282]: type annotations needed
  --> $DIR/issue-67377-invalid-syntax-in-enum-discriminant.rs:12:26
   |
LL |         V = [Vec::new; { [].len()  ].len() as isize,
   |                          ^^ cannot infer type for type parameter `T`

error[E0282]: type annotations needed
  --> $DIR/issue-67377-invalid-syntax-in-enum-discriminant.rs:20:14
   |
LL |         V = [Vec::new; { [0].len() ].len() as isize,
   |              ^^^^^^^^ cannot infer type of the type parameter `T` declared on the struct `Vec`
   |
help: consider specifying the generic argument
   |
LL |         V = [Vec::<T>::new; { [0].len() ].len() as isize,
   |                 +++++

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0282`.
